# google_embedding2_test

./: .gitignore  PROMPT.md  README.md  main.py  pyproject.toml  test_embedding_comparison.ipynb  test_image_search.ipynb  test_multimodal_combination.ipynb
.claude/: settings.json
