[project]
name = "embedding002-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "google-genai>=1.0.0",
    "faiss-cpu>=1.7.0",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    # BGE-M3 전용 (별도 환경 권장)
    "torch>=2.0.0",
    "flagembedding>=1.2.0",
    "huggingface-hub>=1.7.1",
]
